--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,20 @@
   height: 40vmin;
   pointer-events: none;
 }
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
